# 1.1-LANGCHAIN-WITH-OPENAI-AND-OLLAMA

./: .env  1.2-simpleApp.ipynb  README.md  gettingStarted.ipynb  pyproject.toml  requirements.txt
1.1-openai/: 1.1-gettingStarted.ipynb
1.2-Ollama/: app.py
