[tool.poetry]
name = "1-1 langchain"
version = "1.1.0"
description = "LANGCHAIN WITH OPENAI AND OLLAMA"
authors = ["MUHAMMAD AWAIS"]
license = "MA-1.1"
readme = "README.md"
packages = [{include = "1"}]

[tool.poetry.dependencies]
python = "3.11.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
